css/mobile.css
@media (max-width: 800px) {
  #header-home {
    height: 30rem;
  }
  #header-home .header-content {
    padding-top: 5rem;
  }
  #projects-section {
    display: flex;
    width: 100%;
    margin: auto;
  }

  .projects {
    flex-direction: column;
    display: block;
  }

  .projects img {
    width: 100%;
    border-top-right-radius: 5px;
    border-top-left-radius: 5px;
  }

  .project-text-title {
    background: var(--primary-color);
    margin-bottom: 5px;
    border-bottom-right-radius: 5px;
    border-bottom-left-radius: 5px;
  }

  .project-tile::after {
    content: "";
    position: absolute;
    display: block;
    background: inherit;
    opacity: 0.9;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    transform: none;
    transition: none;
  }

  .project-tile:hover:after {
    transform: none;
  }

  .project-tile:hover .project-img {
    transform: none;
  }

  .project-tile:hover .project-text {
    position: absolute;
    text-transform: uppercase;
    font-size: 1.2rem;
    opacity: 0.7;
    margin: 0;
    text-align: center;
    z-index: 1;
    color: var(--white);
    transition: none;
    transition-delay: 300ms;
    width: 100%;
    top: 0;
    transform: none;
  }

  #contact-section .section-head {
    font-size: 1.5rem;
  }
}

@media (max-width: 500px) {
  #main-nav {
    flex-direction: column;
    align-items: center;
  }
  #main-nav li {
    padding: 1rem;
  }
  #header-home {
    height: 10rem;
    border-bottom: 3px solid var(--primary-color);
    background-position: 20% 30%;
  }
  #header-home .header-content {
    display: none;
  }

  #about-section #about-section-info {
    display: grid;
    grid-template-areas:
      "bioimg"
      "bio"
      "cert-1"
      "cert-2"
      "cert-3";
    grid-gap: 1.3rem;
  }

  #projects-section {
    display: flex;
    width: 100%;
    margin: auto;
  }

  .projects {
    flex-direction: column;
    display: block;
  }

  .project-tile {
    background-color: var(--primary-color);
  }

  .projects img {
    width: 100%;
  }

  #main-footer {
    height: 7rem;
  }
  #main-footer .footer-content {
    flex-direction: column;
    padding: 1rem;
    height: 5rem;
  }
}

@media (max-height: 580px) {
  #header-home {
    height: 10rem;
    border-bottom: 3px solid var(--primary-color);
    background-position: 20% 30%;
  }
  #header-home .header-content {
    display: none;
  }
}

@media (max-height: 330px) {
  #header-home .header-content h1 {
    font-size: 2rem;
  }
}

